v0.2.5 - fix icon alignment

--- a/bits-ui/ui/icon/icon.styl
+++ b/bits-ui/ui/icon/icon.styl
@@ -1,5 +1,6 @@
 icon, .icon, [data-is="icon"]
-    vertical-align: middle
+    display: inline-flex
+    align-items: center
     svg
         width: 1em
         height: 1em
